--- a/public/css/chatStyle.css
+++ b/public/css/chatStyle.css
@@ -60,6 +60,7 @@ body {
   border-bottom: 2px solid rgba(128, 128, 128, 0.4);
   /* justify-content: space-between; */
   cursor: pointer;
+  align-items: center;
 }
 
 .messagingProfileIco img {
