--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,33 @@
 :root {
   --button-color-primary: #d66238;
-  --button-color-secondary: #ca83c8;
+  --button-color-secondary: hwb(302 51% 21%);
   --text-color-primary: #86cfd0;
   --header-color-primary: #28225d;
-  --business-color-primary: #9356b2;
+  --business-color-primary: hsl(280, 37%, 52%);
+  --background-color-secondary: rgba(101, 90, 223, 0.5);
+  --business-color-secondary: rgba(147, 86, 178, 0.5);
+  --background-color-footer: #e2e2e2;
 }
 
 body {
   background: var(--text-color-primary);
   background: linear-gradient(
     29deg,
-    var(--text-color-primary),
-    rgba(101, 90, 223, 0.5) 100%
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
   );
   background-size: cover;
-  margin: 70px 0;
+  margin-top: 150px;
+  text-align: center;
+}
+
+.biz {
+  background: var(--text-color-primary);
+  background: linear-gradient(
+    330deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
 }
 
 .header {
@@ -29,8 +42,8 @@ body {
   background: var(--header-color-primary);
   background: linear-gradient(
     29deg,
-    var(--header-color-primary) 0%,
-    var(--header-color-primary) 27%,
+    var(--header-color-primary),
+    rgba(40, 34, 93, 1) 27%,
     rgba(101, 90, 223, 1) 100%
   );
   z-index: 2;
@@ -58,12 +71,68 @@ body {
   padding: 25px 5% 0 0;
 }
 
+#firstname,
+#lastname,
+#username,
+#password,
+#passConfirm,
+#country {
+  width: 200px;
+}
+
+#newsletter {
+  height: 30px;
+  vertical-align: top;
+}
+
 input {
   height: 30px;
   border-radius: 20px;
   border: 0;
   padding: 0 10px;
-  /* width: 120px; */
+  /* width: 220px; */
+  /* margin-right: px; */
+  border: gray solid 1px;
+}
+
+button {
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 20px;
+  padding: 0 20px;
+  color: white;
+}
+
+button:hover {
+  background-color: #b63c5f; /* Green */
+}
+
+.button {
+  background-color: var(--button-color-primary);
+  border: 0;
+  height: 30px;
+  color: white;
+}
+
+#boxbiz {
+  background-color: rgb(220, 170, 152);
+  border: 0;
+}
+
+#boxuser {
+  background-color: #d66238;
+  border: 0;
+}
+
+#boxbiz:hover {
+  background-color: #d66238;
+  border: 0;
+}
+
+#boxbiz,
+#boxuser {
+  width: 200px;
+  height: 75px;
 }
 
 .menu button {
@@ -71,35 +140,45 @@ input {
   color: white;
   border: 2px solid white;
   height: 30px;
-  border-radius: 20px;
-  padding: 0 20px;
-  font-weight: bold;
-  cursor: pointer;
 }
 
-.main {
-  padding: 0 7% 7% 5%;
+.template button {
+  color: white;
+  border: 0px;
+  font-weight: bold;
+  margin: 0 5px;
+}
+
+.box input {
+  margin: 0 5px;
+}
+
+.template {
+  margin-bottom: 5%;
+  text-align: center;
   display: flex;
   justify-content: center;
-  background-image: url(../images/Hero_mobile_wide.webp);
-  background-position: center;
-  background-size: cover;
-  margin-left: 0;
 }
 
-.main_box {
-  display: flex;
-  justify-content: flex-end;
+.form {
+  width: 30%;
+  text-align: left;
+  margin: auto;
 }
-.main_right {
-  display: inline-block;
-  position: relative;
-  width: 40%;
-  margin-top: 100px;
-  background-color: rgba(136, 134, 205, 0.8);
-  border-radius: 12px;
-  padding: 30px;
-  color: black;
+
+#submit,
+#reset {
+  border: 0px;
+  font-weight: bold;
+  width: 100px;
+}
+
+.g_id_signin {
+  display: flex;
+  justify-content: center;
+}
+#home {
+  margin-right: 10px;
 }
 
 h1 {
@@ -107,7 +186,7 @@ h1 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
-  color: white;
+  color: #ffffff;
   line-height: 1.2em;
   text-shadow: 1px 1px 2px black;
 }
@@ -138,134 +217,30 @@ h4 {
   font-size: 16px;
 }
 
-.main_left {
-  margin-top: 66px;
-  position: relative;
-  width: 50%;
-  height: 500px;
+#table {
+  width: 500px;
+  margin: auto;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-button {
-  background-color: var(--button-color-primary);
-  color: white;
+#table th {
+  text-align: end;
+  width: 30%;
+  vertical-align: middle;
+  padding: 8px;
+}
+
+#table td {
+  padding: 8px;
+  vertical-align: middle;
   height: 30px;
-  border-radius: 20px;
-  border: 0px;
-  padding: 0 20px;
-  font-weight: bold;
-}
-
-#signup {
-  margin-right: 10px;
-}
-
-.feature-companies {
-  margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 50px;
-}
-.feature-new-job {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.logos {
-  width: 70%;
-  text-align: center;
-}
-
-.logos img {
-  border-radius: 12px;
-  padding: 5px;
-  width: 120px;
-  height: 40px;
-  background-color: white;
-  margin: 10px;
-  box-shadow: 3px 3px 10px rgb(0 0 0 / 0.4);
-}
-
-.middle {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 100px;
-}
-
-.middle_box {
-  width: 80%;
-  display: flex;
-  justify-content: center;
-}
-
-.middle_left {
-  width: 300px;
-  text-align: center;
-  display: inline-block;
-  position: relative;
-  padding: 0 20px;
-  vertical-align: text-top;
-}
-
-.middle_right {
-  width: 60%;
-  display: inline-block;
-  position: relative;
-}
-
-.job_table {
-  background-color: white;
-  box-shadow: 3px 3px 10px rgb(0 0 0 / 0.4);
-  border-radius: 12px;
-  padding: 20px;
-  width: 75%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5%;
-}
-
-.job_table table {
-  width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: smaller;
-  border-collapse: collapse;
-}
-
-td {
-  padding: 5px;
-  border-bottom: 2px solid #e2e2e2;
-}
-
-.job_name {
-  width: 50%;
+  border-bottom: 0;
   text-align: left;
 }
 
-.job_type {
-  background-color: var(--button-color-secondary);
-}
-
-.expiry_date {
-  width: 145px;
-}
-
-.second_last {
-  border-bottom: none;
-}
-
-.last_line {
-  border-bottom: none;
-  text-align: center;
-}
-
 .footer {
-  background: #e2e2e2;
+  background: var(--background-color-footer);
   margin: 0;
   width: 100%;
   position: absolute;
@@ -273,10 +248,24 @@ td {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  text-align: center;
+}
+
+.footer p {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+
+.footer h4 {
+  line-height: 0.7em;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 14px;
 }
 
 .links {
-  width: 80%;
+  width: 90%;
   display: flex;
   justify-content: center;
   margin: 0;
@@ -284,121 +273,29 @@ td {
 
 .one,
 .two,
-.three,
-.four {
-  width: 25%;
-  font-size: 14px;
+.three {
+  width: 30%;
   vertical-align: middle;
   height: 100%;
   font-size: 20px;
-  padding: 10px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  padding: 0 20px;
+  line-height: 1em;
 }
 
-ul {
-  list-style-type: none;
-}
-
-/* Below this part is for Testimonials */
-.feature-testimonials {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-bottom: 80px;
-}
-.testimonials {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-/* Icon set - http://ionicons.com/ */
-
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
-figure.snip1139 {
-  font-family: "Raleway", Arial, sans-serif;
-  position: relative;
-  overflow: hidden;
-  margin: 10px;
-  min-width: 220px;
-  max-width: 310px;
-  width: 100%;
-  color: #333;
-  text-align: left;
-  box-shadow: 3px 3px 10px rgb(0 0 0 / 0.4);
+.box {
+  background-color: white;
+  box-shadow: 3px 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 12px;
+  padding: 50px 0;
+  width: 50%;
+  margin-bottom: 20px;
 }
-figure.snip1139 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.35s cubic-bezier(0.25, 0.5, 0.5, 0.9);
-  transition: all 0.35s cubic-bezier(0.25, 0.5, 0.5, 0.9);
-}
-figure.snip1139 img {
-  width: 310px;
-  height: 200px;
+
+input[type="checkbox"] {
   vertical-align: middle;
 }
-figure.snip1139 blockquote {
-  position: relative;
-  background-color: #ffffff;
-  padding: 25px 50px 25px 50px;
-  font-size: 0.8em;
-  font-weight: 500;
-  text-align: left;
-  margin: 0;
-  line-height: 1.6em;
-  font-style: italic;
-}
-figure.snip1139 blockquote:before,
-figure.snip1139 blockquote:after {
-  font-family: "FontAwesome";
-  content: "\201C";
-  position: absolute;
-  font-size: 50px;
-  opacity: 0.3;
-  font-style: normal;
-}
-figure.snip1139 blockquote:before {
-  top: 25px;
-  left: 20px;
-}
-figure.snip1139 blockquote:after {
-  content: "\201D";
-  right: 20px;
-  bottom: 0;
-}
-figure.snip1139 .arrow {
-  top: 100%;
-  width: 0;
-  height: 0;
-  border-left: 0 solid transparent;
-  border-right: 25px solid transparent;
-  border-top: 25px solid #ffffff;
-  margin: 0;
-  position: absolute;
-}
-figure.snip1139 .author {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 5px 25px;
-  color: #000000;
-  background-color: #ffffff;
-  margin: 0;
-  text-transform: uppercase;
-}
-figure.snip1139 .author h5 {
-  opacity: 0.8;
-  margin: 0;
-  font-weight: 800;
-}
-figure.snip1139 .author h5 span {
-  font-weight: 400;
-  text-transform: none;
-  padding-left: 5px;
-}
 
-/* Above this part is for Testimonials */
+#checkbox {
+  width: 16px;
+  height: 16px;
+}
