--- a/public/css/styleMain.css
+++ b/public/css/styleMain.css
@@ -376,7 +376,7 @@ figure.snip1139 blockquote:after {
   font-family: "FontAwesome";
   content: "\201C";
   position: absolute;
-  font-size: 50px;
+  /* font-size: 50px; */
   opacity: 0.3;
   font-style: normal;
 }
