--- a/public/css/chatStyle.css
+++ b/public/css/chatStyle.css
@@ -9,20 +9,7 @@ html[data-theme="dark   "] {
   --background-color: #fff;
   --text-color: #121416d8;
 }
-body,
-html {
-  margin: 0;
-  padding: 0;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-body {
-  background-color: var(--background-color);
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-}
+
 .chatboxFooter {
   width: 100%;
   background-color: transparent;
@@ -49,7 +36,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .chatboxHead {
   width: 100%;
