--- a/public/css/chatStyle.css
+++ b/public/css/chatStyle.css
@@ -187,6 +187,7 @@ html[data-theme="dark   "] {
 .newChatBox .messageInput {
   width: 100%;
   bottom: 0;
+  resize: none;
 }
 .newChatBox form {
   bottom: 0;
