--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
   --button-color-primary: #d66238;
   --button-color-secondary: hwb(302 51% 21%);
   --text-color-primary: #86cfd0;
+  --text-color-hover: #4a999a;
   --header-color-primary: #28225d;
   --business-color-primary: hsl(280, 37%, 52%);
   --background-color-secondary: rgba(101, 90, 223, 0.5);
@@ -64,11 +65,41 @@ body {
   line-height: 80%;
 }
 
+.logo a {
+  text-decoration: none;
+  color: var(--text-color-primary);
+}
+
+.logo a:visited {
+  text-decoration: none;
+  color: var(--text-color-primary);
+}
+
+.logo a:hover {
+  text-decoration: none;
+  color: var(--text-color-hover);
+}
+
 .menu {
   display: inline-block;
   position: relative;
   height: 80px;
   padding: 25px 5% 0 0;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.menu a:visited {
+  color: white;
+  text-decoration: none;
 }
 
 #firstname,
@@ -140,6 +171,10 @@ button:hover {
   color: white;
   border: 2px solid white;
   height: 30px;
+}
+
+.topbutton:hover {
+  background-color: var(--header-color-primary);
 }
 
 .template button {
