--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -15,6 +15,11 @@ th {
   text-align: center;
 }
 
+td {
+  text-align: center;
+  color: var(--text-color-primary);
+}
+
 .times {
   width: 5vh;
 }
@@ -23,6 +28,7 @@ th {
   width: 50vh;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 #confirmedContainer > div {
@@ -59,7 +65,7 @@ div {
 
 .selection > div {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   gap: 1em;
 }
 
