--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -47,7 +47,6 @@ html {
 }
 
 .profile {
-  display: flex;
   gap: 0.5rem;
   padding: 1rem;
   background-color: var(--whiteColor);
@@ -57,19 +56,21 @@ html {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   cursor: pointer;
   margin: 5vh 0 5vh 0;
+  text-align: center;
 }
 .profile:hover {
   background-color: var(--secondaryColor);
 }
 
 .profile-img {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
-.profile-name p {
+.profile-name {
   font-size: 12px;
+  line-height: 0.8em;
 }
 
 .menus {
@@ -89,6 +90,7 @@ html {
   text-decoration: none;
   border: none;
   font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.3);
   height: 30px;
   width: 175px;
 }
@@ -98,6 +100,7 @@ html {
 
 .menus button:hover {
   color: var(--fontColor);
+  background-color: white;
 }
 
 .main {
@@ -248,6 +251,7 @@ textarea {
   border-radius: 10px;
   padding: 10px;
   border: gray solid 1px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
@@ -487,4 +491,16 @@ input[type="checkbox"] {
 
 #table #jobdescription {
   vertical-align: top;
+}
+
+.noUi-value {
+  padding: 5px;
+}
+
+#salary {
+  height: 90px;
+}
+
+.noUi-tooltip {
+  font-size: 10px;
 }
