--- a/public/css/multi-selector.css
+++ b/public/css/multi-selector.css
@@ -1,3 +1,16 @@
+:root {
+  --primaryColor: #4c50d3;
+  --secondaryColor: #ffce00;
+  --fontColor: #1e1e1e;
+  --whiteColor: #fff;
+  --greyColor: #e7e7e7;
+  --darkGreyColor: #5f5f5f;
+  --softPurple: #e7e8ff;
+  --softBlue: #c3e1ff;
+  --softYellow: #fff5cc;
+  --softRed: #ffcbc8;
+}
+
 .multi-selector * {
   box-sizing: border-box;
   margin: 0;
@@ -5,23 +18,26 @@
 }
 
 .multi-selector {
-  width: 30%;
   min-width: 250px;
-  min-height: 80px;
+  height: 30px;
   margin: 0 auto;
 }
 
 .multi-selector > .input-container {
-  width: 100%;
+  width: 250px;
   height: 40px;
   position: relative;
   margin-bottom: 5px;
 }
 
 .multi-selector > .input-container > input {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
+  border-radius: 20px;
+  padding: 0 10px;
+  /* width: 220px; */
+  /* margin-right: px; */
+  border: gray solid 1px;
+  border-radius: 20px;
+  width: 250px;
 }
 
 .multi-selector .autocomplete-results {
@@ -32,7 +48,7 @@
   top: 40px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: bisque;
+  background-color: var(--softBlue);
   z-index: 999999;
 }
 
@@ -41,7 +57,7 @@
 }
 
 .multi-selector .autocomplete-results > div:hover {
-  background-color: lightpink;
+  background-color: var(--whiteColor);
 }
 
 .multi-selector .selected-items-container {
