--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -18,7 +18,7 @@ html {
 }
 
 .sidebar {
-  min-width: 18%;
+  width: 220px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -54,12 +54,9 @@ html {
   border: none;
   border-radius: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  cursor: pointer;
   margin: 5vh 0 5vh 0;
   text-align: center;
-}
-.profile:hover {
-  background-color: var(--secondaryColor);
+  width: 175px;
 }
 
 .profile-img {
@@ -68,9 +65,13 @@ html {
   border-radius: 50%;
 }
 
+.profile-name p,
+h4 {
+  line-height: 0.3em;
+}
+
 .profile-name {
-  font-size: 12px;
-  line-height: 0.8em;
+  font-size: 15px;
 }
 
 .menus {
@@ -102,16 +103,19 @@ html {
   color: var(--fontColor);
   background-color: white;
 }
+.userProfile {
+  margin-left: 300px;
+}
 
 .main {
-  min-width: 50%;
   height: auto;
-  padding: 40px 70px;
-  margin-left: 290px;
+  min-width: 65%;
+  padding: 40px 20px;
   background-color: var(--whiteColor);
   z-index: inherit;
   border-radius: 5px;
-  text-align: left;
+  text-align: center;
+  margin-bottom: 70px;
 }
 .main #personal {
   height: 80vh;
@@ -242,7 +246,7 @@ input {
   height: 30px;
   border-radius: 20px;
   padding: 0 10px;
-  /* width: 220px; */
+  width: 220px;
   /* margin-right: px; */
   border: gray solid 1px;
 }
@@ -373,10 +377,9 @@ h3 {
   text-align: center;
 }
 
-p,
+.main p,
 h4 {
   font-family: Georgia, "Times New Roman", Times, serif;
-  line-height: 1.6em;
   font-size: 16px;
 }
 
