--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -31,11 +31,11 @@ td {
   justify-content: flex-start;
 }
 
-#confirmedContainer > div {
+/* #confirmedContainer > div {
   display: flex;
   align-items: center;
   gap: 1em;
-}
+} */
 
 .cal {
   display: flex;
@@ -55,7 +55,8 @@ div {
   background-color: red;
 }
 
-.selection {
+.selection,
+.confirmedCont {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,16 +64,22 @@ div {
   gap: 1em;
 }
 
-.sortedEntry {
+.sortedEntry,
+.confirmedAvail {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0em;
 }
 
-.sortedEntry > .titleDate {
+.titleDate {
   display: flex;
   gap: 0.5em;
+  border-bottom: 1px solid black;
+}
+
+.times {
+  margin-bottom: 1vh;
   border-bottom: 1px solid black;
 }
 
@@ -121,8 +128,10 @@ button {
   text-align: center;
 }
 
-#confirmChoices {
+#confirmChoices,
+#confirmedContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
 }
