--- a/public/css/styleMain.css
+++ b/public/css/styleMain.css
@@ -158,7 +158,7 @@ button {
 }
 
 .button {
-  background-color: var(--button-color-primary);
+  background-color: var(--button-color-secondary);
   border: 0;
   height: 30px;
 }
