--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -9,33 +9,37 @@ table {
 
 td,
 th {
-  border: 1px solid black;
   width: 20vh;
   height: 2.5vh;
   text-align: center;
 }
 
 td {
+  border: 1px solid black;
   text-align: center;
   color: white;
 }
 
-.times {
+/* .times {
   width: 5vh;
-}
+} */
 
-#confirmedContainer {
-  width: 50vh;
+#confirmedContainer,
+#confirmedInterviews {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-/* #confirmedContainer > div {
+#confirmedInterviews .timeDiv {
+  flex-direction: column;
+  gap: 0;
+}
+
+#confirmedInterviews .timeDiv > p:nth-of-type(3) {
   display: flex;
-  align-items: center;
   gap: 1em;
-} */
+}
 
 .cal {
   display: flex;
@@ -52,11 +56,12 @@ div {
 }
 
 .selected {
-  background-color: red;
+  background-color: orange;
 }
 
 .selection,
-.confirmedCont {
+.confirmedCont,
+.confirmedInt {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -75,11 +80,6 @@ div {
 .titleDate {
   display: flex;
   gap: 0.5em;
-  border-bottom: 1px solid black;
-}
-
-.times {
-  margin-bottom: 1vh;
   border-bottom: 1px solid black;
 }
 
@@ -110,6 +110,10 @@ button {
 
 .confirmed {
   background-color: green;
+}
+
+.interview {
+  background-color: #28225d;
 }
 
 .cal-container {
