--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -17,23 +17,34 @@ html {
   scroll-snap-type: y mandatory;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: "Courier New", Courier, monospace;
+  /* We need to choose our own font-family or create one*/
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
 .sidebar {
-  width: 220px;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   /* justify-content: space-between; */
   padding: 2rem;
-  background: var(--text-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background-color: var(--primaryColor);
   color: var(--whiteColor);
   position: fixed;
   left: 0;
+  margin-right: 200px;
 }
 .sidebar .logo a {
   display: flex;
@@ -42,11 +53,12 @@ html {
   text-decoration: none;
 }
 
-.logo {
+/* .logo {
   letter-spacing: 2;
-}
+} */
 
 .profile {
+  display: flex;
   gap: 0.5rem;
   padding: 1rem;
   background-color: var(--whiteColor);
@@ -54,34 +66,27 @@ html {
   border: none;
   border-radius: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  cursor: pointer;
   margin: 5vh 0 5vh 0;
-  text-align: center;
-  width: 175px;
+}
+.profile:hover {
+  background-color: var(--secondaryColor);
 }
 
 .profile-img {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
 }
 
-.profile-name p,
-h4 {
-  line-height: 0.3em;
-}
-
-.profile-name {
-  font-size: 15px;
+.profile-name p {
+  font-size: 12px;
 }
 
 .menus {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-
-.menus a {
-  text-decoration: none;
+  gap: 2rem;
 }
 
 .menus button {
@@ -89,11 +94,9 @@ h4 {
   align-items: center;
   color: var(--fontColor);
   text-decoration: none;
+  background-color: var(--primaryColor);
   border: none;
   font-weight: bold;
-  background-color: rgba(255, 255, 255, 0.3);
-  height: 30px;
-  width: 175px;
 }
 .menus i {
   margin-right: 0.5rem;
@@ -101,22 +104,20 @@ h4 {
 
 .menus button:hover {
   color: var(--fontColor);
-  background-color: white;
-}
-
-.userProfile {
-  margin-left: 300px;
+  border: 2px solid var(--primaryColor);
+  box-shadow: var(--darkGreyColor);
 }
 
 .main {
+  width: 80%;
   height: auto;
-  min-width: 65%;
-  padding: 40px 20px;
-  background-color: var(--whiteColor);
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 2%;
+  margin-left: 20%;
+  background-color: var(--softPurple);
   z-index: inherit;
   border-radius: 5px;
-  text-align: center;
-  margin-bottom: 70px;
 }
 .main #personal {
   height: 80vh;
