--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -59,12 +59,22 @@ html {
   width: 175px;
 }
 
-.profile-img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+#profilePhoto {
+  display: none;
 }
-
+#photoUploadClick {
+  border-radius: 50%;
+  padding: 0;
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  outline: none;
+  overflow: hidden;
+}
+#submitUploadPhoto {
+  width: 150px;
+  height: 30px;
+}
 .profile-name p,
 h4 {
   line-height: 0.3em;
