slider and calendar CSS

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -4,7 +4,8 @@
 }
 
 .cal-container {
-  margin-left: 220px;
+  padding: 25px;
+  width: 98%;
 }
 
 table {
@@ -54,11 +55,11 @@ td {
 table:hover {
   cursor: grab;
 }
-
+/* 
 div {
   display: flex;
   justify-content: center;
-}
+} */
 
 .selected {
   background-color: orange;
