--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -24,13 +24,20 @@ html {
   flex-direction: column;
   align-items: center;
   /* justify-content: space-between; */
+  z-index: 20;
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
   color: var(--whiteColor);
   position: fixed;
   left: 0;
+  top: 80px;
 }
+
 .sidebar .logo a {
   display: flex;
   align-items: center;
@@ -56,9 +63,7 @@ html {
 }
 
 .profile-img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  max-width: 100px;
 }
 
 .profile-name p,
@@ -104,14 +109,19 @@ h4 {
 }
 
 .main {
-  height: auto;
+  width: calc(100% - 300px);
   min-width: 65%;
-  padding: 40px 20px;
+  /* padding: 40px 20px; */
   background-color: var(--whiteColor);
   z-index: inherit;
   border-radius: 5px;
+  left: -1.5rem;
   text-align: center;
+  position: relative;
+  margin-left: 300px;
   margin-bottom: 70px;
+  flex-direction: column;
+  align-items: center;
 }
 .main #personal {
   height: 80vh;
@@ -147,7 +157,11 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
+  background: linear-gradient(
+    330deg,
+    var(--text-color-primary) 0%,
+    var(--background-color-secondary) 100%
+  );
 }
 
 .header {
@@ -160,7 +174,12 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
+  background: linear-gradient(
+    29deg,
+    var(--header-color-primary),
+    rgba(40, 34, 93, 1) 27%,
+    rgba(101, 90, 223, 1) 100%
+  );
   z-index: 2;
 }
 
@@ -236,6 +255,13 @@ input {
   width: 220px;
   /* margin-right: px; */
   border: gray solid 1px;
+}
+
+input[type="radio"] {
+  height: initial;
+  width: initial;
+  /* margin-right: px; */
+  border: none;
 }
 
 textarea {
@@ -336,7 +362,8 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -345,7 +372,8 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -371,7 +399,8 @@ h4 {
 #table {
   width: 500px;
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #table th {
@@ -402,7 +431,8 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
