--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -30,11 +30,7 @@ html {
   z-index: 20;
   padding: 2rem;
   background: var(--text-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(29deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
   color: var(--whiteColor);
   position: fixed;
   left: 0;
@@ -169,11 +165,7 @@ body {
 
 .biz {
   background: var(--text-color-primary);
-  background: linear-gradient(
-    330deg,
-    var(--text-color-primary) 0%,
-    var(--background-color-secondary) 100%
-  );
+  background: linear-gradient(330deg, var(--text-color-primary) 0%, var(--background-color-secondary) 100%);
 }
 
 .header {
@@ -186,12 +178,7 @@ body {
   width: 100%;
   height: 80px;
   background: var(--header-color-primary);
-  background: linear-gradient(
-    29deg,
-    var(--header-color-primary),
-    rgba(40, 34, 93, 1) 27%,
-    rgba(101, 90, 223, 1) 100%
-  );
+  background: linear-gradient(29deg, var(--header-color-primary), rgba(40, 34, 93, 1) 27%, rgba(101, 90, 223, 1) 100%);
   z-index: 2;
 }
 
@@ -376,8 +363,7 @@ button:hover {
 }
 
 h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 36px;
   font-weight: medium;
   color: #ffffff;
@@ -386,8 +372,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
   font-weight: medium;
   color: var(--header-color-primary);
@@ -413,8 +398,7 @@ h4 {
 #table {
   width: 500px;
   margin: auto;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 #table th {
@@ -445,8 +429,7 @@ h4 {
 }
 
 .footer p {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -611,8 +594,7 @@ input[type="checkbox"] {
   margin: auto;
 }
 .jobPostingTitle {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 2rem;
   font-weight: medium;
   color: black;
@@ -670,4 +652,141 @@ input[type="checkbox"] {
 }
 #closePositionBtn {
   opacity: 1;
+}
+
+.talentSearchMain form,
+.talentSearchMain button {
+  all: unset;
+  cursor: pointer;
+}
+
+#landing {
+  width: 90vh;
+}
+
+#landingContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 1em;
+  word-break: break-all;
+  text-align: left;
+}
+
+#landingContainer p {
+  font-weight: 100;
+}
+
+#landingContainer div {
+  display: flex;
+  text-align: left;
+  width: 100%;
+  background-color: rgba(210, 210, 210, 0.6);
+  border-radius: 5px;
+}
+
+.landingCard > h1 {
+  margin: 1em 0;
+}
+
+.landingBtn {
+  color: black;
+  width: min-content;
+  border: none;
+  margin-bottom: 1.5vh;
+}
+
+#landingPersonalCard {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+}
+
+#landingPersonalCard div {
+  margin-top: 1em;
+}
+
+#landingPersonalCard .left {
+  align-self: flex-start;
+}
+
+.landingCard {
+  display: flex;
+  flex-direction: column;
+  /* width: 100%; */
+}
+
+.landingCard > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.landingCard p {
+  margin: 0.5em 0;
+}
+
+#landingContainer h1 {
+  color: var(--header-color-primary);
+  font-weight: 100;
+  text-shadow: none;
+  width: 100%;
+  margin: 0;
+}
+#landingContainer h2 {
+  color: var(--header-color-primary);
+  font-weight: 100;
+  text-shadow: none;
+  width: 100%;
+  margin: 0;
+  line-height: 1em;
+}
+#landingContainer h3 {
+  color: var(--header-color-primary);
+  font-weight: 100;
+  font-size: 1.5em;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  letter-spacing: normal;
+  text-shadow: none;
+  width: max-content;
+  margin: 0;
+  text-transform: none;
+  text-align: left;
+}
+
+#landingContainer h4 {
+  width: 100%;
+  text-align: right;
+  margin: 0;
+}
+
+.landingEducation,
+.landingExperience {
+  width: 100%;
+}
+
+#landingContainer .landingSameLine {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#landingContainer i {
+  margin-right: 1vh;
+}
+
+.landingAvail {
+  display: flex;
+  flex-direction: column;
+}
+
+.landingCalDate {
+  margin-top: 0.5vh;
+  text-decoration: underline;
+}
+
+.landingAvail,
+.landingAvail div,
+.landingAvail div p {
+  margin: 0;
 }
