--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -53,6 +53,7 @@ html {
   margin: 5vh 0 5vh 0;
   text-align: center;
   width: 175px;
+  height: 200px;
 }
 
 #profilePhoto {
@@ -511,7 +512,7 @@ input[type="checkbox"] {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 1em;
-  word-break: break-all;
+  word-break: break-word;
   text-align: left;
 }
 
