--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -864,13 +864,54 @@ input[type="checkbox"] {
   display: flex;
   gap: 1em;
   align-items: center;
+  margin-top: 0.25em;
 }
 
-.meetingSubCard button {
+.bookedMeetings button {
+  all: unset;
+}
+
+.meetingSubCard > form:nth-of-type(1) > button,
+.meetingSubCard > form:nth-of-type(2) > button {
+  background-color: rgba(210, 210, 210, 0.6);
+  padding: 0 1vh;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.meetingSubCard > form:last-of-type button {
   width: fit-content;
   background-color: red;
+  padding: 0 0.2em;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .bookedMeetingCard p {
   margin: 1vh 0;
+}
+
+.bookedMeetings input {
+  scale: 0.5;
+}
+
+.cancelContainer {
+  margin-top: 5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+.cancelSelection {
+  margin-top: 1em;
+}
+
+.cancelContainer > button,
+#cancelRolesBtn {
+  width: fit-content;
+  background-color: red;
+  padding: 0.5em;
+  border-radius: 5px;
+  cursor: pointer;
 }
