--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -13,7 +13,7 @@
 }
 html,
 body {
-  height: 100vh;
+  height: 100%;
 }
 html {
   scroll-behavior: smooth;
@@ -64,7 +64,9 @@ html {
 }
 
 .profile-img {
-  max-width: 150px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
 .profile-name p,
@@ -108,32 +110,29 @@ h4 {
 
 .bizProfile {
   margin-left: 300px;
-  width: calc(100vw - 268px);
-  height: 100%;
+  width: calc(98% - 300px);
 }
 
-.userProfile .main {
+.main {
   /* height: auto;
   min-width: 500px;
   padding: 40px 20px; current changes */
-  height: 86%;
   /* min-width: 65%; */
-  /* padding: 40px 20px; */
+  padding: 40px 20px;
   background-color: var(--whiteColor);
   z-index: inherit;
   border-radius: 5px;
+  left: -1.5rem;
   text-align: center;
   /* margin-bottom: 30px; current changes */
   position: relative;
   /* padding-left: 300px; */
-  margin-bottom: 70px;
-  display: flex;
-  width: calc(100vw - 286px);
+  padding-bottom: 40px;
+  /* display: flex; */
+  width: 100%;
   flex-direction: column;
   align-items: center;
-  margin-left: 278px;
 }
-
 .main #personal {
   height: 80vh;
 }
@@ -163,8 +162,9 @@ h4 {
 body {
   background-color: white;
   background-size: cover;
+  margin: 0;
   margin-top: 80px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .biz {
@@ -193,6 +193,16 @@ body {
     rgba(101, 90, 223, 1) 100%
   );
   z-index: 2;
+}
+
+#photoUploadClick {
+  border-radius: 50%;
+  padding: 0;
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  outline: none;
+  overflow: hidden;
 }
 
 .logo {
@@ -411,7 +421,6 @@ h4 {
 }
 
 #table {
-  width: 500px;
   margin: auto;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -422,6 +431,7 @@ h4 {
   width: 30%;
   vertical-align: middle;
   padding: 8px;
+  font-size: 14px;
 }
 
 #table td {
@@ -670,4 +680,8 @@ input[type="checkbox"] {
 }
 #closePositionBtn {
   opacity: 1;
+}
+
+#logoUpload {
+  padding-top: 10px;
 }
