--- a/public/css/styleUserProfile.css
+++ b/public/css/styleUserProfile.css
@@ -57,13 +57,15 @@ html {
   border: none;
   border-radius: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  margin: 5vh 0 5vh 0;
+  margin: 0 0 5vh 0;
   text-align: center;
   width: 175px;
 }
 
 .profile-img {
-  max-width: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 #profilePhoto {
   display: none;
@@ -296,6 +298,7 @@ button {
 
 button:hover {
   background-color: var(--secondaryColor); /* Green */
+  cursor: pointer;
 }
 
 .button {
@@ -303,6 +306,7 @@ button:hover {
   border: 0;
   height: 30px;
   color: white;
+  font-weight: bold;
 }
 
 #boxbiz {
@@ -411,21 +415,22 @@ h4 {
   font-size: 16px;
 }
 
-#table {
-  width: 500px;
+#userTable {
+  width: 600px;
   margin: auto;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-#table th {
+#userTable th {
   text-align: end;
   width: 30%;
   vertical-align: middle;
   padding: 8px;
+  cursor: auto;
 }
 
-#table td {
+#userTable td {
   padding: 8px;
   vertical-align: middle;
   height: 30px;
@@ -520,7 +525,7 @@ input[type="checkbox"] {
   justify-content: center;
 }
 
-#table #jobdescription {
+#jobdescription {
   vertical-align: top;
 }
 
@@ -530,6 +535,10 @@ input[type="checkbox"] {
 
 #salary {
   height: 90px;
+}
+
+.salaryslider {
+  width: 304px;
 }
 
 .noUi-tooltip {
@@ -671,4 +680,14 @@ input[type="checkbox"] {
 .landingAvail div,
 .landingAvail div p {
   margin: 0;
+}
+
+.usertable td {
+  border: none;
+  color: black;
+  cursor: auto;
+}
+
+.usertable .selected {
+  background-color: none;
 }
