--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -7,25 +7,25 @@
   margin-left: 220px;
 } */
 
-table {
+.cal-container table {
   border-collapse: collapse;
   width: 90%;
 }
 
-td,
-th {
+.cal-container td,
+.cal-container th {
   width: 20vh;
   height: 2.5vh;
   text-align: center;
 }
 
-td {
+.cal-container td {
   border: 1px solid black;
   text-align: center;
   color: white;
 }
 
-.times {
+.cal-container .times {
   width: 5vh;
 }
 
@@ -53,6 +53,7 @@ td {
 .cal {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 table:hover {
