--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -923,3 +923,24 @@ input[type="checkbox"] {
   border-radius: 5px;
   cursor: pointer;
 }
+
+#talentHead {
+  all: unset;
+  display: flex;
+  gap: 1em;
+  margin-top: 1vh;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#talentHead a {
+  all: unset;
+  background-color: var(--primaryColor);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1vh;
+  cursor: pointer;
+  color: white;
+}
