fix talent card php errors on job listing search page

--- a/public/css/talentSearchStyle.css
+++ b/public/css/talentSearchStyle.css
@@ -230,6 +230,7 @@ label[for="slider"] {
 }
 .searchTags {
   display: flex;
+  justify-content: center;
 }
 .talentCardHeadLeft {
   display: flex;
