default profile pic uploaded, icons changed on user sidebar, resume sidebar action removed and integrated into landingpage

--- a/public/css/styleBizProfile.css
+++ b/public/css/styleBizProfile.css
@@ -699,6 +699,7 @@ input[type="checkbox"] {
   background-color: rgba(210, 210, 210, 0.6);
   border-radius: 5px;
   padding: 1em;
+  width: 90vh;
 }
 
 .landingBtn {
